<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelJournal</string>
    <string name="err_creating_note">Error creating new Evernote note</string>
    <string name="success_creating_note">Note Saved to Evernote</string>
    <string name="label_app_title">Travel Journal App</string>
    <string name="label_select_button">Select Image</string>
    <string name="label_message">No image selected</string>
    <string name="label_save_button">Save</string>
    <string name="err_image_selected">Error Select Image</string>
    <string name="err_retrieving_resource">Error retrieving resource</string>
    <string name="msg_retrieved_resource">Retrieved resource from server</string>
    <string name="label_log_in">Log In</string>
    <string name="label_log_out">Log Out</string>
    <string name="loading">Loading...</string>
    <string name="label_camera_button">Take Photo</string>
    <string name="title_field" />
    <string name="location_field">Location</string>
    <string name="note_field">Note</string>
    <string name="titlePlaceholder">Title</string>
    <string name="locationPlaceholder">Location</string>
    <string name="entryPlaceholder">Enter Note Here</string>
    <string name="img_desc">EntryImg</string>
    <string name="note_award">Award</string>
    <string name="awardIcon">!!!</string>
    <string name="logo">Logo</string>
    <string name="add_note">Add</string>
    <string name="search_note">Search</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_add_note">Add</string>
    <string name="menu_search">Search</string>

    <color name="primaryOrange">#f3c21c</color>

    <string name="app_name_banner">TRAVELJOURNAL</string>
    <string name="dialog_award_title">Give An Award:</string>
    <string name="dialog_award_message">Best of...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_abs">AbsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="gps_dialog">GPS is currently disabled. Would you like to turn it on? Please press the back button to return to the app afterwards.</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="success_update_note">Note saved to Evernote</string>
    <string name="err_update_note">Error saving Evernote note</string>

</resources>